# FastBFF

./: .render.yaml  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  router_builder.py
configs/: JsonAPI.json  YamlAPI.yaml  config.yaml
fastbff/: cli.py  fastbff_app.py  http_handlers.py  router_builder.py
fastbff/middlewares/: authentication.py  rate_limiter.py
fastbff/util/: helper.py
middlewares/: authentication.py  rate_limiter.py
